--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "un_pdf_downloader",
-    "version": "1.4.1",
+    "version": "1.5.0",
     "description": "UN PDF Downloader",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "electron ."
     },
     "author": "JieJiSS",
     "license": "Apache-2.0",
