--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "exit 0",
         "start": "electron .",
-        "build": "electron-builder"
+        "build": "electron-builder --mac"
     },
     "author": "JieJiSS",
     "license": "Apache-2.0",
