--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ branches:
   except:
   - "/^v\\d+\\.\\d+\\.\\d+$/"
 before_deploy:
-  - git tag $(git log --pretty=format:"%h")
+  - git tag $(git log -n 1 --pretty=format:"%h")
 deploy:
   provider: releases
   api_key:
