update and bug fixes for mac

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
             "background": "background.png",
             "window": {
                 "width": 600,
-                "height": 310
+                "height": 310,
+                "x": 60,
+                "y": 100
             }
         }
     }
