try to fix paste bug on Mac OS; other updates

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "un_pdf_downloader",
-    "version": "1.6.1",
-    "description": "UN PDF Downloader",
+    "productName": "UN PDF Downloader",
+    "version": "1.6.2",
+    "description": "File downloader for UN ODS",
     "main": "index.js",
     "scripts": {
         "test": "exit 0",
