--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "test": "exit 0",
         "start": "electron .",
-        "build": "electron-builder --mac"
+        "build": "electron-packager . 'UN PDF Downloader' --ignore=build --arch=x64 --platform=darwin --electron-version=1.8.7 --icon=build/icon/icon.icns --out=dist/",
+        "dmg": "create-dmg ./dist/*/*.app ./dist/"
     },
     "author": "JieJiSS (Pan Ruizhe)",
     "license": "Apache-2.0",
@@ -15,16 +16,5 @@
         "request": "^2.83.0",
         "sweetalert2": "^6.10.1",
         "tmp": "0.0.33"
-    },
-    "build": {
-        "dmg": {
-            "background": "background.png",
-            "window": {
-                "width": 600,
-                "height": 310,
-                "x": 60,
-                "y": 100
-            }
-        }
     }
 }
