--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,12 @@ before_install:
 before_script:
 - git lfs pull
 script:
-- yarn add --dev electron@1.7.9
+- yarn add --dev electron@1.8.7
 - yarn global add electron-packager@12.1.0
 - yarn global add create-dmg@3.2.0
 - yarn install --pure-lockfile
 - yarn build
+- yarn run dmg
 branches:
   except:
   - "/^v\\d+\\.\\d+\\.\\d+$/"
